Added and received items via nomenclature_service
