# src/core/evet_type.py
@@ -6,5 +6,7 @@ from enum import Enum
 class event_type(Enum):
     DELETE_NOMENCLATURE = 1
     CHANGE_NOMENCLATURE = 2
-    CHANGE_RANGE = 3
-    CHANGE_DATE_BLOCK = 4
+    GET_NOMENCLATURE = 3
+    PUT_NOMENCLATURE = 4
+    CHANGE_RANGE = 5
+    CHANGE_DATE_BLOCK = 6
